--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="./assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
