--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,8 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
-  <link rel="icon" type="image/png" href="./assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
